<resources>
    <string name="app_name">JukuTweet</string>
    <string name="action_settings">Settings</string>
    <!--<string name="section_format">Hello World from section: %1$d</string>-->
    <string name="preference_file_key">com.jclassic.tabbedquiz.PREFERENCE_FILE_KEY</string>

    <string name="dialog_title">Enter User Name</string>

    <string name="remove_dialog_title">Remove %1$s?</string>
    <string name="nolists">no saved users</string>


    <string name="nousersadded">Click the plus button to add a user manually, or search for users/tweets in the search window</string>

    <string name="dialog_mylist_title">Enter List Name</string>
    <string name="dialog_mylist_rename_title">Enter New List Name</string>

    <string name="notweets">no tweets found</string>
    <string name="nousers">no users found</string>


    <string name="notimeline_for_user">Unable to get timeline for %1$s</string>


    <string name="nointernet">No internet.</string>

    <string name="atsign">\u0040</string>


    <!--<string name="timeline_created">Created: %1$s</string>-->
    <!--<string name="timeline_favorited">Favorited: %1$s</string>-->
    <!--<string name="timeline_retweeted">ReTweeted: %1$s</string>-->

    <string name="retweeted_text">retweeted</string>
    <string name="favorited_text">favorited</string>

    <string name="access_token">843793669106909186-rxzRHDQGzVza0NstjljujV6cp4bpfwY</string>
    <string name="access_token_secret">DYlvYn05mKz8otLKzQHI6naiNhDWuyoyFSrzvMDP9GYtG</string>


    <string name="empty">empty</string>
    <string name="empty_parenthesis_space"> (empty)</string>
    <string name="empty_parenthesis">(empty)</string>
    <string name="dotdotdot">...</string>
    <string name="mylistcount">(%1$d)</string>

    <string name="menuchildbrowse">Browse/Edit</string>

    <string name="menuchildviewsavedtweets">Saved Tweets</string>
    <string name="wordDetailPopup_SearchTwitter">Search Twitter</string>


    <string name="nolistsfound">No lists found. Click the star to create a list, or enable one of the default lists in the user preferences.</string>

    <string name="clickanoption">Click on one of the options to select it</string>

    <string name="kanji">Kanji</string>
    <string name="singledash">-</string>

    <string name="list_favoriteslistcount"># of Kanji Favorites Lists</string>
    <string name="dialog_title_list_favoritescount">Kanji Favorites Lists</string>



    <string name="list_favoriteslistcount_tweet"># of Tweet Favorites Lists</string>
    <string name="dialog_title_list_favoritescount_tweet">Tweet Favorites Lists</string>

    <string name="statsComplete">%1$d%% Complete</string>
    <string name="percentage">%1$d%%</string>
    <string name="score">%1$d/%2$d</string>
    <string name="score_text">Score: </string>

    <string name="tweetcount">x%1$d</string>

    <string name="userDetailPopupFriends">%1$s Friends</string>
    <string name="userDetailPopupFollowers">%1$s Followers</string>

    <string name="following_text">Following</string>
    <string name="followers_text">Followers</string>

    <string name="following_text_upper">FOLLOWING</string>
    <string name="followers_text_upper">FOLLOWERS</string>

    <string name="actionicon_cancel">Cancel</string>
    <string name="actionicon_delete">Remove</string>
    <string name="actionicon_copy">Copy</string>
    <string name="actionicon_selectall">Select All</string>

    <string name="action_move">Move</string>

    <string name="rownumber">%1$d.</string>

    <string name="search_romaji">日本語/Romaji</string>
    <string name="search_definition">Defn.</string>
    <string name="search_twitter">Twitter</string>
    <string name="search_dictionary">Dictionary</string>
    <string name="searchquerytoolong">Query must be 25 characters or less</string>
    <string name="searchinputtexttosearch">Input some text to search</string>
    <string name="searchchoosecriteria">Choose search criteria (Romaji or Definition)</string>

    <string name="search_search_text">Search: </string>
    <string name="search_criteria_text">Criteria: </string>
    <string name="search_noresultsfound_text">No results found...</string>
    <string name="search_user_text">User</string>
    <string name="search_tweet_text">Tweet</string>

    <string name="tweetbreak_unabletoparse">Unable to parse tweet</string>
    <string name="tweetadapter_favoritetweets">Favorite Tweets</string>

    <string name="usertimeline_stillworking">Still working...</string>

    <string name="wordlistadapter_favoritewords">Favorite Words</string>

    <string name="fillintheblanks_score">Score</string>

    <string name="statsfrag_multchoice_wordbuilder_highscore">High Score! %1$d</string>
    <string name="statsfrag_multchoice_wordbuilder_total">Total: %1$d</string>
    <string name="statsfrag_multchoice_wordbuilder_unique">Unique: %1$d</string>


    <string name="exitquiz">Exit Quiz?</string>


    <string name="flashcards_front_text">Front: </string>
    <string name="flashcards_back_text">Back: </string>
asdf
    <string name="user_icon">User Icon</string>
    <string name="user_banner">User Banner</string>
    <string name="favorites_star">Add to Favorites</string>

    <string name="favorites_text">Favorites</string>

    <string name="menuoption_text_type">"Type: "</string>
    <string name="menuoption_text_size">"Size: "</string>
    <string name="menuoption_text_timer">"Timer: "</string>
    <string name="menuoption_text_colors">"Colors: "</string>


    <string name="pref_previously_started">"PrefsPreviouslyStarted"</string>




    <string-array name="entryvalues_list_favoritescount_kanji">
        <item>Blue</item>
        <item>Red</item>
        <item>Purple</item>
    </string-array>

    <string-array name="entryvalues_list_favoritescount_tweet">
        <item>Yellow</item>
        <item>Green</item>
        <item>Orange</item>
    </string-array>

    <string-array name="entryvalues_list_favoritescount_kanji_default">
        <item>Blue</item>
        <item>Red</item>
    </string-array>

    <string-array name="entryvalues_list_favoritescount_tweet_default">
        <item>Yellow</item>
        <item>Green</item>
    </string-array>

    <string-array name="menu_mylist">
        <item>Browse/Edit</item>
        <item>Flash Cards</item>
        <item>Multiple Choice</item>
        <item>Fill in the Blanks</item>
        <item>Stats</item>
    </string-array>

    <string-array name="menu_userslist">
        <item>Timeline</item>
        <item>Saved Tweets</item>
    </string-array>


    <!--<string-array name="favoriteslistcount_default">-->
        <!--<item>Blue</item>-->
        <!--<item>Red</item>-->
    <!--</string-array>-->


    <!--<string-array name="favoriteslistcount_default_tweet">-->
        <!--<item>Yellow</item>-->
        <!--<item>Green</item>-->
    <!--</string-array>-->

    <string name="listclearlist">Clear List?</string>
    <string name="listoptionclearlist">1. Clear List</string>
    <string name="listoptionrenamelist">2. Rename List</string>
    <string name="listoptionremovelist">3. Remove List</string>

    <string name="areyousure">Are you sure?</string>
    <string name="removelistwarning">Remove %1$s?</string>
    <string name="clearlistwarning">Clear %1$s?</string>

    <string-array name="testfeeds" >
        <item>jukuproject</item>
        <item>Suzu_Mg</item>
        <item>pamyurin</item>
        <item>ariyoshihiroiki</item>
        <item>hajimesyacho</item>
        <item>Starbucks_J</item>
    </string-array>















    <string-array name="menuoptions_flashcards">
        <item>Kanji</item>
        <item>Kana</item>
        <item>Definition</item>
    </string-array>





    <string-array name="menuoptions_multiplechoicetype">
        <item>Kanji to Definition</item>
        <item>Kanji to Kana</item>
        <item>Kana to Kanji</item>
        <item>Definition to Kanji</item>
    </string-array>


    <string-array name="menuoptions_quizSize">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <string-array name="menuoptions_timer">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string name="menuoptionskanjitodef">Kanji to Definition</string>
    <string name="menuoptionskanji">Kanji</string>
    <string name="menuoptionsdefinition">Definition</string>
    <string name="menuoptionsnone">None</string>
    <string name="menuoptionsten">10</string>



    <string name="jukusetup_userid">843793669106909186</string>
    <string name="jukusetup_name">JukuProject</string>
    <string name="jukusetup_description">Japanese language learning</string>
    <string name="jukusetup_screenname">jukuproject</string>
    <string name="jukusetup_url">http://pbs.twimg.com/profile_images/843862051931983874/iac-8i4c_normal.jpg</string>


</resources>
