<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jukuproject.jukutweet.MainActivity">

    <group
        android:id="@+id/menu_main_group"
        android:visible="true">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    </group>




    <group
        android:id="@+id/menu_browsemylist_group"
        android:visible="false">
        <item
            android:id="@+id/action_cancel"
            android:orderInCategory="1"
            android:title="@string/actionicon_cancel"
            android:icon="@drawable/ic_clear_white_24dp"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_delete"
            android:orderInCategory="2"
            android:title="@string/actionicon_delete"
            android:icon="@drawable/ic_delete_white_24dp"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_copy"
            android:orderInCategory="3"
            android:title="@string/actionicon_copy"
            android:icon="@drawable/ic_content_copy_white_24dp"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_selectall"
            android:orderInCategory="4"
            android:title="@string/actionicon_selectall"
            android:icon="@drawable/ic_select_all_white_24dp"
            app:showAsAction="always" />
    </group>



    <!--<group-->
        <!--android:id="@+id/menu_browsetweets_group"-->
        <!--android:visible="false">-->
        <!--<item-->
            <!--android:id="@id/action_cancel"-->
            <!--android:orderInCategory="1"-->
            <!--android:title="@string/actionicon_cancel"-->
            <!--android:icon="@drawable/ic_clear_white_24dp"-->
            <!--app:showAsAction="always" />-->

        <!--<item-->
            <!--android:id="@id/action_delete"-->
            <!--android:orderInCategory="2"-->
            <!--android:title="@string/actionicon_delete"-->
            <!--android:icon="@drawable/ic_delete_white_24dp"-->
            <!--app:showAsAction="always" />-->

        <!--<item-->
            <!--android:id="@id/action_copy"-->
            <!--android:orderInCategory="3"-->
            <!--android:title="@string/actionicon_copy"-->
            <!--android:icon="@drawable/ic_content_copy_white_24dp"-->
            <!--app:showAsAction="always" />-->

        <!--<item-->
            <!--android:id="@id/action_selectall"-->
            <!--android:orderInCategory="4"-->
            <!--android:title="@string/actionicon_selectall"-->
            <!--android:icon="@drawable/ic_select_all_white_24dp"-->
            <!--app:showAsAction="always" />-->
    <!--</group>-->
</menu>
