<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchtoplayout"
        android:layout_marginBottom="4dp">

        <TextView
            android:layout_gravity="start|center_vertical"
            android:text="Search: "
            android:textSize="19sp"
            android:textColor="@android:color/black"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/search_dictionary"
            android:textColorHighlight="@android:color/transparent"
            android:id="@+id/checkBoxDictionary"
            android:textSize="19sp"
            app:buttonTint="@android:color/black"
            android:layout_gravity="start"
            />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:text="@string/search_twitter"
            app:buttonTint="@android:color/black"
            android:layout_marginLeft="15dp"
            android:textSize="19sp"
            android:textColorHighlight="@android:color/transparent"
            android:id="@+id/checkBoxTwitter"
            android:layout_gravity="start"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchOnOptionLayout"
        android:layout_marginBottom="4dp">
        <TextView
            android:layout_gravity="start|center_vertical"
            android:text="Criteria: "
            android:textSize="19sp"
            android:textColor="@android:color/black"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColorHighlight="@android:color/transparent"
            android:text="@string/search_romaji"
            app:buttonTint="@android:color/black"
            android:id="@+id/checkBoxRomaji"
            android:textSize="19sp"
            android:layout_gravity="start"
            />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColorHighlight="@android:color/transparent"
            android:text="@string/search_definition"
            app:buttonTint="@android:color/black"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textSize="19sp"
            android:id="@+id/checkBoxDefinition"
            android:layout_gravity="start"
            />


    </LinearLayout>
        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:id="@+id/dbsearch">


        </SearchView>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progbar_layout"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <View style="@style/Divider_Black"
        android:id="@+id/dividerview"

        android:visibility="visible"/>

        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:spb_sections_count="6"
            app:spb_color="#000000"
            app:spb_speed="2.0"
            app:spb_stroke_width="1dp"
            app:spb_stroke_separator_length="8dp"
            app:spb_reversed="false"
            app:spb_mirror_mode="false"
            app:spb_progressiveStart_activated="true"
            app:spb_progressiveStart_speed="3.0"
            app:layout_anchor="@id/dividerview"
            app:layout_anchorGravity="bottom"
            app:spb_progressiveStop_speed="3.4"
            />


    </android.support.design.widget.CoordinatorLayout>

    <TextView
        android:gravity="start"
        android:id="@+id/noresults"
        android:text="No results found..."
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:minHeight="30dp"
        />






    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />







</LinearLayout>